# MicroblinkPraxis

./: .gitignore
CMakeProjects/: CMakeLists.txt  README.md  conanfile.txt
CMakeProjects/IntroLib/: IntroLib.cmake  IntroLib.srcs.cmake
CMakeProjects/IntroLib/Include/: LinkedList.hpp  MyString.hpp  UniquePtr.hpp
CMakeProjects/IntroLibTest/: IntroLibTest.cmake  IntroLibTest.srcs.cmake
HelloWorld/: main.cpp
HelloWorld.xcodeproj/: project.pbxproj
IntroLib/: conanfile.txt
IntroLib/IntroLib/: IntroLib.srcs.cmake
IntroLib/IntroLibTest/: IntroLibTest.cmake  IntroLibTest.srcs.cmake
LinkedList/: CMakeLists.txt  LinkedList.cpp  LinkedList.hpp  README.md  main.cpp  test_LinkedList.cpp
LinkedList/LinkedList/: CMakeLists.txt  LinkedList.cmake  LinkedList.cpp  LinkedList.hpp  LinkedList.srcs.cmake
LinkedList/LinkedList/Include/: LinkedList.hpp
LinkedList/LinkedList/Source/: LinkedList.cpp
LinkedList/LinkedListTest/: CMakeLists.txt  LinkedListTest.cmake  LinkedListTest.cpp  LinkedListTest.srcs.cmake
LinkedList/LinkedListTest/Source/: LinkedListTest.cpp
RAII_video/: RAII_video.cpp
nn-playground/: .clang-format  CMakeLists.txt  conanfile.txt
nn-playground/NNPlayground/: NNPlayground.cmake  NNPlayground.srcs.cmake
nn-playground/NNPlaygroundDemo/: NNPlaygroundDemo.cmake  NNPlaygroundDemo.srcs.cmake
nn-playground/NNPlaygroundTests/: NNPlaygroundTests.cmake  NNPlaygroundTests.srcs.cmake
nn-playground/PlaygroundLib/: PlaygroundLib.cmake
nn-playground/PlaygroundLibMain/: PlaygroundLibMain.cmake  PlaygroundLibMain.srcs.cmake
(+31 files in other folders)
